--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dom": "^0.14.7",
     "react-immutable-proptypes": "^1.5.1",
     "react-redux": "^4.4.0",
+    "react-router": "^2.0.0",
     "redux": "^3.3.1",
     "redux-saga": "^0.7.0"
   }
