--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.0",
     "browser-sync": "^2.11.1",
+    "connect-history-api-fallback": "^1.1.0",
     "gulp": "^3.9.1",
     "require-dir": "^0.3.0",
     "webpack": "^1.12.13",
